add new layout chat

--- a/views/Fixed/DefaultHead.ejs
+++ b/views/Fixed/DefaultHead.ejs
@@ -8,4 +8,5 @@
   <!-- Custom styles for this template -->
   <link href="/static/css/PostCss.css" rel="stylesheet">
   <link href="/static/css/sweetalert.css" rel="stylesheet">
+  <link href="/static/css/bot.css" rel="stylesheet">
   
