--- a/views/RanNet/index.ejs
+++ b/views/RanNet/index.ejs
@@ -21,10 +21,11 @@
 			<!-- <p class="text-center"><a class="btn btn-primary btn-lg" href="#" role="button">Saiba mais</a></p> -->
 		</div>
 
+		<% include ../Fixed/bot.ejs %>
+
 		<script>
 			console.log(navigator.userAgent);
 		</script>
-
 
 	</div>
 </body>
