--- a/views/RanNet/uploads.ejs
+++ b/views/RanNet/uploads.ejs
@@ -29,8 +29,10 @@
         <input id="upload-input" style="display:none" type="file" name="uploads[]" multiple="multiple"><br>
 
         <script src="/static/js/jquery-2.2.4.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
         <script src="/static/js/upload.js"></script>
+
+        <% include ../Fixed/bot.ejs %>
     </div>
 
 
