Clear input on enter

--- a/public/css/bot.css
+++ b/public/css/bot.css
@@ -2,7 +2,7 @@
     position: fixed;
     bottom: 0;
     right: 30px;
-    width: 300px;
+    width: 25%;
     height: 80%;
     background-color: #fff;
     font-family: 'Lato', sans-serif;
