--- a/public/css/PostCss.css
+++ b/public/css/PostCss.css
@@ -1,6 +1,6 @@
 
 body {
-    background: url('../img/logo.jpg') no-repeat center center fixed;
+    background: url('../img/logoHD.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
