--- a/views/soom.ejs
+++ b/views/soom.ejs
@@ -8,7 +8,7 @@
   }
 
   .bgimg {
-    background-image: url('/static/img/logo.jpg');
+    background-image: url('/static/img/logoHD.png');
     height: 100%;
     background-position: center;
     background-size: cover;
