--- a/public/css/erropage.css
+++ b/public/css/erropage.css
@@ -228,7 +228,7 @@ img {
 
 body {
 	font-family: 'Work Sans', sans-serif;
-	background: url('../img/logo.jpg') no-repeat center center fixed;
+	background: url('../img/logoHD.png') no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
