--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,5 +1,5 @@
 html { 
-    background: url('../img/logo.jpg') no-repeat center center fixed; 
+    background: url('../img/logoHD.png') no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
