--- a/views/RanNet/donwload.ejs
+++ b/views/RanNet/donwload.ejs
@@ -25,8 +25,7 @@
 
 		<div class="jumbotron" style="padding: 2rem 1rem;">
 			<h2>Downloads!</h2>
-			<p>Lista com todos os arquivos armazenados no servidor:.</p>
-
+			<p>Lista com todos os arquivos armazenados no servidor.</p>
 
 			<table class="table table-striped table-dark">
 				<thead class="thead-dark">
@@ -48,9 +47,14 @@
 							<td>
 								<%= donwloadslist[i].name %>
 							</td>
-							<td>
-								<%= donwloadslist[i].creat_by.name %>
-							</td>
+
+							<%if (donwloadslist[i].creat_by) { %>
+								<td>
+									<%= donwloadslist[i].creat_by.name %>
+								</td>
+							<% } else { %>
+								<td> Usuário excluído </td>
+							<% } %>
 							<td>
 								<%= donwloadslist[i].created_at.toLocaleString() %>
 							</td>
