--- a/views/Erro/pageerro.ejs
+++ b/views/Erro/pageerro.ejs
@@ -34,7 +34,7 @@
 			<p><%= msg1 %>
 				<br> <%= msg2 %></p>
 			<div class="home">
-				<a href="/">home</a>
+				<a href="/login">home</a>
 			</div>
 		</div>		 
 	</body>
