small login fix

--- a/views/Erro/pageerro.ejs
+++ b/views/Erro/pageerro.ejs
@@ -26,7 +26,7 @@
 		<div class="container-w3layouts  text-center">
 			<div class="agileits-logo">
 				<h1>
-					<a href="index.html">
+					<a href="/">
 						<span class="fa fa-spinner" aria-hidden="true"></span>RanNet</a>
 				</h1>
 			</div>
@@ -34,7 +34,7 @@
 			<p><%= msg1 %>
 				<br> <%= msg2 %></p>
 			<div class="home">
-				<a href="/login">home</a>
+				<a href="/">home</a>
 			</div>
 		</div>		 
 	</body>
