--- a/views/RanNet/login.ejs
+++ b/views/RanNet/login.ejs
@@ -14,7 +14,7 @@
   </div>
   <div id="container">
     <h1>Log In</h1>
-    <form action="/" method="POST" id="myform">
+    <form action="/login" method="POST" id="myform">
       <input type="text" name="matricula" placeholder="E-mail">
       <input type="password" name="logpassword" placeholder="Password" id="pwd">
       <a class="btnsub" href="#" onclick="document.getElementById('myform').submit()" type="submit">Log in</a>
