--- a/views/mask/index.ejs
+++ b/views/mask/index.ejs
@@ -171,9 +171,9 @@
                                 </div>
                                 <!-- .Icon ends here -->
                                 <div class="service-content">
-                                    <h5>Leve</h5>
+                                    <h5>Inteligente</h5>
                                     <p class="serp">
-                                        Tamanho app pequeno bem robusto.
+                                        sugestão de música de acordo com o gosto do usuário.
                                     </p>
                                 </div>
                                 <!-- .Service-content ends here -->
