--- a/views/Fixed/DefaultHead.ejs
+++ b/views/Fixed/DefaultHead.ejs
@@ -1,12 +1,14 @@
 <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1"> 
-  <script src="/static/js/jquery-1.10.2.js"></script>
-  <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-  <script src="/static/js/bootstrap.min.js"></script>
-  <script src="/static/js/sweetalert.min.js"></script>
-  <!-- Custom styles for this template -->
-  <link href="/static/css/PostCss.css" rel="stylesheet">
-  <link href="/static/css/sweetalert.css" rel="stylesheet">
-  <link href="/static/css/bot.css" rel="stylesheet">
-  
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="/static/css/bootstrap.min.css">
+<!-- Custom styles for this template -->
+<link href="/static/css/PostCss.css" rel="stylesheet">
+<link href="/static/css/sweetalert.css" rel="stylesheet">
+<link href="/static/css/bot.css" rel="stylesheet">
+
+<script src="/static/js/jquery-1.10.2.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
+<script src="/static/js/sweetalert.min.js"></script>
+<script src="/static/js/jquery.dataTables.min.js"></script>
+<script src="/static/js/dataTables.bootstrap.min.js"></script>
