scripts on the end of html

--- a/views/RanNet/index.ejs
+++ b/views/RanNet/index.ejs
@@ -21,6 +21,7 @@
 			<!-- <p class="text-center"><a class="btn btn-primary btn-lg" href="#" role="button">Saiba mais</a></p> -->
 		</div>
 
+		<% include ../Fixed/scripts.ejs %>
 		<% include ../Fixed/bot.ejs %>
 
 		<script>
