--- a/views/RanNet/posts.ejs
+++ b/views/RanNet/posts.ejs
@@ -33,6 +33,8 @@
 		</div>
 
 	</div>
+
+	<% include ../Fixed/scripts.ejs %>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
 	
 	<script>
