--- a/views/RanNet/pwd.ejs
+++ b/views/RanNet/pwd.ejs
@@ -37,6 +37,7 @@
             </form>
         </div>
 
+        <% include ../Fixed/scripts.ejs %>
         <% include ../Fixed/bot.ejs %>
 
         <script>
