--- a/views/RanNet/uploads.ejs
+++ b/views/RanNet/uploads.ejs
@@ -32,6 +32,7 @@
         <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
         <script src="/static/js/upload.js"></script>
 
+        <% include ../Fixed/scripts.ejs %>
         <% include ../Fixed/bot.ejs %>
     </div>
 
