--- a/views/RanNet/users.ejs
+++ b/views/RanNet/users.ejs
@@ -69,7 +69,7 @@
                 </tbody>
             </table>
         </div>
-
+        <% include ../Fixed/scripts.ejs %>
         <% include ../Fixed/bot.ejs %>
     </div>
 </body>
