--- a/views/RanNet/login.ejs
+++ b/views/RanNet/login.ejs
@@ -21,6 +21,7 @@
     </form>
   </div>
 
+  <% include ../Fixed/scripts.ejs %>
   <script>
     var input = document.getElementById("pwd");
     // Execute a function when the user releases a key on the keyboard
